@@ -65,6 +65,9 @@ lintian (2.5.32) UNRELEASED; urgency=medium
     + [BR] Detect autogenerated gperf data.  (Closes: #762179).
   * data/cruft/missing-dir-search-path:
     + [BR] Fix a false positive in fspy for source-is-missing.
+  * data/cruft/warn-file-type:
+    + [BR] Fix a false positive source-is-missing by checking
+      -nc.js suffix.
   * data/debhelper/*:
     + [NT] Refresh against unstable to pick up the rename of
       libaqbanking-dev.  Thanks to Micha Lenk for the reminder.
